# Prisma

./: .dockerignore  App.tsx  BUG_FIXES.md  Dockerfile  ExpertCard.tsx  ProcessNode.tsx  README.md  SettingsModal.tsx  api.ts  config.ts  docker-compose.yml  package-lock.json  types.ts  vite.config.ts
components/: ChatArea.tsx  ConfigWizard.tsx  ErrorBoundary.tsx  ErrorCard.tsx  ErrorPanel.tsx  ErrorToast.tsx  FeatureTour.tsx  FileUpload.tsx  Header.tsx  HistoryPanel.tsx  InputSection.tsx  ModelSearchModal.tsx  PerformancePanel.tsx  ProcessFlow.tsx  ToastContainer.tsx
deepthink/: .env  App.tsx  Dockerfile  ExpertCard.tsx  README.md  SettingsModal.tsx  api.ts  config.ts  docker-compose.yml  index.css  index.html  index.tsx  interceptor.ts  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  types.ts  (+1 more)
deepthink-backend/: .env.example  .gitignore  42.0.0  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deepthink-backend/deepthink/: __init__.py  __main__.py  config.py  credentials_store.py  custom_llm.py  graph.py  llm.py  model_registry.py  state.py
deepthink-backend/deepthink/api/: __init__.py  schemas.py  server.py
deepthink-backend/deepthink/nodes/: __init__.py  critic.py  experts.py  planner.py  reviewer.py  synthesizer.py
deepthink-backend/deepthink/prompts/: __init__.py  critic.py  expert.py  planner.py  reviewer.py  synthesizer.py
deepthink-backend/deepthink/tools/: __init__.py  calculator.py  code_executor.py  web_search.py
deepthink-backend/tests/: __init__.py  test_api.py  test_graph.py  test_tools.py
(+63 files in other folders)
